<resources>
    <string name="app_name">Recommended</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="already_registered">Already Registered</string>
    <string name="username">Username</string>
    <string name="created_by">Created by: Pål Bøckmann</string>
</resources>